Tue Nov 22 04:14:05 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

 	* TAO_IDL/be_include/be_visitor_traits.h:

	  Added missing operation declaration. 

Tue Nov 22 01:42:48 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/PortableGroup.mpc:

	  Rather than disable this project in the ACE_FOR_TAO
	  configuration, inherit from acesocketslib_for_tao to allow it to
	  be used.

Tue Nov 22 09:33:30 (IST) 2005  Bala Natarajan <bala_natarajan@symantec.com>

	* orbsvcs/orbsvcs/PortableGroup.mpc:

          Do not build in ACE_FOR_TAO configuration.

Mon Nov 21 19:28:51 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Notify/EventChannel.h: Removed mistakenly left
	  in attempt to #include EventChannel.inl.

Mon Nov 21 22:22:41 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_cs.cpp:

          Removed commented out code.

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:

          Added code generation of Value_Traits<> template
          specialization for boxed valuetypes. Thanks to
          Johnny Willemse <jwillemsen@remedy.nl> for reporting
          the missing code. This fix closes [BUGID:2311].

Mon Nov 21 20:14:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/RTCORBA/Private_Connection/RTCORBA_Private_Connection.mpc:

          Added an 'after' line for one of the two projects, since they
          share an IDL file and VC8 concurrency features need an
          ordering.

Mon Nov 21 13:21:03 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	  This entry is the result of an accumulation of many changes in
	  the OCITAO repository for the Notification Service and the
	  subsequent merge of those changes back to DOC.  There have been
	  general changes to improve code formatting in accordance with